INFRA-993 - Add JVM memory settings